# project_athena

./: .env.example  .gitignore  alembic.ini  create_structure.ps1  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_users_table.py
backend/: app.py
backend/api/: router.py
backend/core/: config.py  database.py  logging.py
backend/infrastructure/database/: __init__.py  base.py  session.py
backend/modules/users/application/commands/: register_user_command.py
backend/modules/users/application/dto/: register_user_request.py  register_user_response.py  token_payload.py
backend/modules/users/application/interfaces/: jwt_provider.py  password_hasher.py  user_unit_of_work.py
backend/modules/users/application/services/: password_service.py
backend/modules/users/application/use_cases/: register_user.py  register_user_use_case.py
backend/modules/users/domain/: exceptions.py
backend/modules/users/domain/entities/: user.py
backend/modules/users/domain/repositories/: user_repository.py
backend/modules/users/domain/value_objects/: email.py  password_hash.py
backend/modules/users/infrastructure/models/: user.py
backend/modules/users/infrastructure/repositories/: sqlalchemy_user_repository.py
backend/modules/users/infrastructure/security/: bcrypt_password_hasher.py
backend/modules/users/infrastructure/unit_of_work/: sqlalchemy_user_unit_of_work.py
backend/modules/users/presentation/: dependencies.py  router.py  schemas.py
docs/: ARCHITECTURE.md  ROADMAP.md
